fix that annoying scrollbar problem

--- a/app/stylesheets/report_card.less
+++ b/app/stylesheets/report_card.less
@@ -4,10 +4,25 @@
 @listing_width: 280px;
 
 /**
+ * Dashboard
+ */
+#dashboard {
+  overflow-x:auto;
+  overflow-y:hidden;
+  
+  #content {
+    padding-bottom:0;
+    
+    .content {
+      padding-bottom:0;
+    }
+  }
+}
+
+/**
  * Report Card - Page & Data Row Styles
  */
 #report_card {
-  min-width:900px;
   overflow-x:auto;
   overflow-y:hidden;
   
